# nanobabana-editor

./: .env.example  .gitignore  CHANGELOG.md  README.md  app.py  app_config.toml  app_config.toml.backup  pyproject.toml
.claude/commands/: review-pii.md
config/templates/: image_edit.toml  multi_image.toml  multiturn_edit.toml  text_to_image.toml
docs/: GEMINI_API_REFERENCES.md  GEMINI_IMAGE_PRICING_ESTIMATE.md  GEMINI_IMAGE_SPEC.md  GEMINI_PROMPT_BEST_PRACTICES.md
samples/gemini_api_sample/: nanobanana_edit_alpha_multi_turn.py  nanobanana_edit_alpha_sample.py
src/core/: image_utils.py  model_specs.py  prompt_opt_demo.py  prompt_optimizer.py  prompt_templates.py  tab_specs.py
src/core/generators/: base.py  gemini.py
src/ui/: gradio_app.py  gradio_app_old.py.backup
src/ui/tabs/: base_tab.py  basic_edit_tab.py  gemini_tab.py  multiturn_edit_tab.py  reference_tab.py  settings_tab.py
src/ui/tabs/prompts/: basic_edit_prompts.py  multiturn_edit_prompts.py  tmp_gemini_work_basic_edit_prompts.py
tests/: test_api_key_warning.py  test_gradio_image_handling.py  test_image_utils.py  test_prompt_optimizer.py  test_tab2_enhancements.py
